functions and variables (formerly used for Kannada script).

*** `malayalam' and `mlm-util', and all associated malayalam-* and
mlm-* functions and variables (formerly used for Malayalam script).

*** `tamil' and `tml-util, and all associated tamil-* and tml-*
functions and variables (formerly used for Tamil script).


* Lisp Changes in Emacs 23.1

** `all-completions' may now return the base size in the last cdr.
Since this means the returned list is not properly nil-terminated, this
is an incompatible change and is thus enabled by the new variable
completion-all-completions-with-base-size.

** New function `apply-partially' for curried application.

** `fill-forward-paragraph-function' specifies which function the filling
code should use to find paragraph boundaries.

** The variable `this-command-keys-shift-translated' is non-nil if the
key sequence invoking the current command was found by
shift-translation.

** The new interactive spec code ^ says to first call
handle-shift-selection if shift-select-mode is non-nil, before reading
the command arguments.

** When deleting a terminal, the special hook `delete-terminal-functions'
is run.

** The `read-shell-command' function does what its name says, with completion.
It uses the minibuffer-local-shell-command-map for that.

** The `buffer-swap-text' function can swap the text between two buffers.
This can be useful for modes such as tar-mode, archive-mode, RMAIL.

** `clear-image-cache' can be told to flush only images of a specific file.

** clone-indirect-buffer now runs the clone-indirect-buffer-hook.

** `beginning-of-defun-function' now takes one argument, the count
 given to `beginning-of-defun'.

** The variable `inhibit-changing-match-data', if non-nil, prevents the
search and match primitives from changing the match data.

+++
** New function `match-substitute-replacement' returns the result of
`replace-match' without actually using it in the buffer.
