@@ -811,6 +811,9 @@ functions and variables (formerly used for Tamil script).
 
 * Lisp Changes in Emacs 23.1
 
+** minibuffer-local-must-match-filename-map is now named
+minibuffer-local-filename-must-match-map.
+
 ** `all-completions' may now return the base size in the last cdr.
 Since this means the returned list is not properly nil-terminated, this
 is an incompatible change and is thus enabled by the new variable
